@@ -1,5 +1,0 @@
-/* home.module.css */
-
-.homeGif {
-    width: 800px;
-}
